--- a/src/template.html
+++ b/src/template.html
@@ -5,17 +5,16 @@
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
         <meta content="yes" name="mobile-web-app-capable">
-        <meta content="Droplion Fulfillment" name="application-name">
-        <meta content="#fd7e14" name="theme-color">
+        <meta content="FriendlyCouponPanda" name="application-name">
+        <meta content="#e37262" name="theme-color">
         <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
         <link href="manifest.json" rel="manifest">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
 
-        <title>CircleData</title>
+        <title>FriendlyCouponPanda</title>
 
         %links%
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
 
         %scripts%
     </head>
